move all edm-related stuff to EdmCacheManager